// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    metrics={
      Array [
        "coverage",
      ]
    }
    rootComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
         
      </td>
      <td
        colSpan={5}
      >
         
      </td>
    </tr>
  </tbody>
  <tbody>
    <withScrollTo(Component)
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={5}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a search 1`] = `
<table
  className="data boxed-padding zebra"
>
  <tbody>
    <withScrollTo(Component)
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      key="foo"
      metrics={Array []}
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={4}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for leak 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    metrics={Array []}
    rootComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature",
          "type": "SHORT",
        }
      }
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      key="foo"
      metrics={Array []}
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
         
      </td>
      <td
        colSpan={4}
      >
         
      </td>
    </tr>
  </tbody>
  <tbody>
    <withScrollTo(Component)
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature",
          "type": "SHORT",
        }
      }
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      key="foo"
      metrics={Array []}
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={4}
      />
    </tr>
  </tbody>
</table>
`;
